// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text prop "onPress" 1`] = `
<div
  className="r-text-1ogs4z5 r-cursor-1loqt21"
  data-focusable={true}
  dir="auto"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
/>
`;

exports[`components/Text prop "selectable" 1`] = `
<div
  className="r-text-1ogs4z5"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" 2`] = `
<div
  className="r-text-1ogs4z5 r-userSelect-lrvibr"
  dir="auto"
/>
`;
